# autotask-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: session-resume.json  status.json
.github/workflows/: ci.yml
docs/: api-reference.md  entity-types.md  library-usage.md  picklist-ids.md
docs/plans/: 2026-03-17-autotask-python-client.md
src/autotask/: __init__.py  cli.py  client.py  config.py  exceptions.py  mcp_server.py  query.py  rate_limiter.py
src/autotask/entities/: __init__.py  manager.py
src/autotask/models/: __init__.py  base.py  billing.py  company.py  contract.py  note.py  project.py  resource.py  task.py  ticket.py  time_entry.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_entity_manager.py  test_exceptions.py  test_integration.py  test_mcp_server.py  test_models.py  test_query.py  test_rate_limiter.py
