[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotask-client"
version = "0.1.0"
description = "Python client for the Autotask REST API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
autotask = "autotask.cli:_safe_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/autotask"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
